--- a/app/index.html
+++ b/app/index.html
@@ -31,13 +31,13 @@
     <!-- bower:js -->
     <script src="/bower_components/zepto/zepto.js"></script>
     <script src="/bower_components/swiper/dist/js/swiper.js"></script>
-    <script src="/bower_components/webcola/WebCola/cola.v2.min.js"></script>
+    <!--<script src="/bower_components/webcola/WebCola/cola.v2.min.js"></script>-->
     <!-- endbower -->
     <!-- endbuild -->
 
         <!-- build:js scripts/main.js -->
         <script src="scripts/base.js"></script>
-        <script src="scripts/adaptor.js"></script>
+        <!--<script src="scripts/adaptor.js"></script>-->
         <!--<script src="scripts/index.js"></script>-->
         <!-- endbuild -->
 </body>
