--- a/app/index.html
+++ b/app/index.html
@@ -36,9 +36,9 @@
     <!-- endbuild -->
 
         <!-- build:js scripts/main.js -->
-        <script src="scripts/base.js"></script>
+        <!--<script src="scripts/base.js"></script>-->
         <!--<script src="scripts/adaptor.js"></script>-->
-        <!--<script src="scripts/index.js"></script>-->
+        <script src="scripts/index.js"></script>
         <!-- endbuild -->
 </body>
 </html>
