--- a/app/index.html
+++ b/app/index.html
@@ -26,19 +26,21 @@
     <div id="tree-container"></div>
     <script src="http://code.jquery.com/jquery-1.10.2.min.js"></script>
     <script src="http://marvl.infotech.monash.edu.au/webcola/cola.v3.min.js"></script>
-    <script src="http://d3js.org/d3.v3.min.js"></script>
+    <script src="scripts/d3.js"></script>
     <!-- build:js scripts/vendor.js -->
     <!-- bower:js -->
     <script src="/bower_components/zepto/zepto.js"></script>
     <script src="/bower_components/swiper/dist/js/swiper.js"></script>
-    <!--<script src="/bower_components/webcola/WebCola/cola.v2.min.js"></script>-->
+
     <!-- endbower -->
     <!-- endbuild -->
 
         <!-- build:js scripts/main.js -->
+    <!--<script src="scripts/tmdgrah.js"></script>-->
         <!--<script src="scripts/base.js"></script>-->
-        <!--<script src="scripts/adaptor.js"></script>-->
-        <script src="scripts/index.js"></script>
+        <script src="scripts/adaptor.js"></script>
+
+        <script src="scripts/colaForce.js"></script>
         <!-- endbuild -->
 </body>
 </html>
